fix spacing issue on large screens of hero-text

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -117,16 +117,15 @@ a{
 }
 
 .main-content{
-    margin-top: 1.5rem;
+    /* margin-top: 1.5rem; */
     /* margin-left: 1rem;
     margin-right: 1rem; */
     text-align: center;
 }
 
 .hero{
-    display:flex;
-    flex-direction:column;
-
+    display: flex;
+    flex-direction: column;
 }
 
 .main-title{
@@ -235,7 +234,7 @@ a{
         background-color: rgba(255,255,255,0.5);
         margin-top: 2rem;
         border-radius: 6px;
-        padding: 2rem;
+        /* padding: 2rem; */
     }
 
     .hero {
